<resources>
    <string name="app_name">体能测试</string>
    <string name="action_settings">Settings</string>
    <string name="name">请输入姓名</string>
    <string name="age">请输入年龄</string>
    <string name="login_btn">登 录</string>
    <string name="boy">Boy</string>
    <string name="gril">Gril</string>
    <string name="title_activity_main">MainActivity</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="test_title">体能测试</string>
    <string name="check_title">单位考核</string>
    <string name="timer_title">秒表计时</string>
    <string name="standard_title">测试标准</string>

    <string name="shape_title">体型</string>
    <string name="push_up_title_test">俯卧撑-自测</string>
    <string name="push_up_title_check">俯卧撑-考核</string>
    <string name="push_up_title_exercise">俯卧撑-练习</string>
    <string name="sit_up_title_test">仰卧起坐-自测</string>
    <string name="sit_up_title_check">仰卧起坐-考核</string>
    <string name="sit_up_title_exercise">仰卧起坐-练习</string>
    <string name="shuttle_run_title">10*5往返跑</string>
    <string name="running_title">跑步</string>

    <!--俯卧撑自测界面-->
    <string name="push_up_test_prompt">请将手机平放在地上,点击右上角按钮开始</string>
    <!--俯卧撑练习界面-->
    <string name="push_up_ex_prompt">请将手机绑在上臂外侧,点击右上角按钮开始</string>
    <!--俯卧撑考核界面-->
    <string name="push_up_check_prompt">请将手机绑在上臂外侧,点击右上角刷新按钮开始</string>

    <!--仰卧起坐自测界面-->
    <string name="sit_up_test_prompt">请用双手抱住手机两侧,点击右上角按钮开始</string>
    <!--仰卧起坐练习界面-->
    <string name="sit_up_ex_prompt">请将手机横向绑在腹部,点击右上角按钮开始</string>
    <!--仰卧起坐考核界面-->
    <string name="sit_up_check_prompt">请将手机横向绑在腹部,点击右上角刷新按钮开始</string>

    <!--仰卧起坐-->
    <string name="running_title_three">跑步-3000米</string>
    <string name="running_title_five">跑步-5000米</string>
    <string name="running_title_free">跑步-自由跑</string>

    <!--引导页-->
    <string name="entry">立即体验</string>
</resources>
