<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.example.physicaltests.LoginActivity"
    tools:showIn="@layout/activity_login">

    <LinearLayout
        android:id="@+id/logo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:gravity="center_horizontal"
        android:orientation="vertical">
        <ImageView
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:background="@drawable/logo"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:text="@string/app_name"
            android:textColor="#064781"
            android:textSize="24sp"
            />
    </LinearLayout>

    <EditText
        android:id="@+id/user_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/name"
        android:layout_below="@id/logo"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:layout_marginTop="10dp"
        android:gravity="center"/>

    <RadioGroup
        android:id="@+id/user_sex"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/user_name"
        android:layout_marginTop="10dp"
        android:orientation="horizontal"
        android:layout_centerHorizontal="true"
        android:checkedButton="@+id/boy">
        <RadioButton
            android:id="@+id/boy"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:text="@string/boy"
            android:gravity="center"
            />
        <RadioButton
            android:id="@+id/gril"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="60dp"
            android:text="@string/gril"
            android:gravity="center"/>
    </RadioGroup>

    <EditText
        android:id="@+id/user_age"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/age"
        android:layout_below="@id/user_sex"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:numeric="integer" />

    <Button
        android:id="@+id/login_btn"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_below="@id/user_age"
        android:layout_marginTop="30dp"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:background="#5b9bd4"
        android:text="@string/login_btn"
        android:textColor="#ffffff"
        android:textSize="18sp"
        />
</RelativeLayout>
